
SUBDIRS = common-libs/mul-lib common-libs/3rd-party/derived-lib  \
          common-libs/3rd-party/quagga-lib mul application/l2switch

DIST_SUBDIRS = common-libs/mul-lib common-libs/3rd-party/derived-lib \
               common-libs/3rd-party/quagga-lib mul application/l2switch

EXTRA_DIST = aclocal.m4

ACLOCAL_AMFLAGS = -I m4
