
SUBDIRS = common-libs/mul-lib common-libs/3rd-party/derived-lib  \
          common-libs/3rd-party/quagga-lib \
          services/loadable/topo_routing \
          mul \
          application/l2switch \
          application/fabric \
          application/cli 

DIST_SUBDIRS = common-libs/mul-lib common-libs/3rd-party/derived-lib \
               common-libs/3rd-party/quagga-lib \
               services/loadable/topo_routing/ \
               mul \
               application/l2switch \
               application/fabric \
               application/cli

EXTRA_DIST = aclocal.m4

ACLOCAL_AMFLAGS = -I m4
